creating parallax mouse event handler

--- a/src/components/BlankSpace/BlankSpace.scss
+++ b/src/components/BlankSpace/BlankSpace.scss
@@ -1,4 +1,10 @@
 .BlankSpace{
     background-color: #000050;
-    height:75px;
+    height:350px;
+}
+
+.topHeader{
+    color:aquamarine;
+    font-size:36px;
+    padding-top: 125px;
 }
